--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   "private": true,
   "dependencies": {},
   "devDependencies": {
-    "@nrwl/cli": "15.2.1",
-    "@nrwl/nx-cloud": "latest",
-    "@nrwl/workspace": "15.2.1",
-    "nx": "15.2.1",
+    "@nrwl/cli": "15.3.0",
+    "@nrwl/nx-cloud": "15.0.2",
+    "@nrwl/react": "^15.3.0",
+    "@nrwl/workspace": "15.3.0",
+    "nx": "15.3.0",
     "prettier": "^2.6.2",
     "typescript": "~4.8.2"
   }
